<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeToRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/india_cronavirus_tracker"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        />


    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/textView"


        android:baselineAligned="false">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
         android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textColor="@color/dark_red"
            android:textSize="10sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_virus"
            android:tint="@color/dark_red"


            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/confirmedTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/dark_red"
            android:textSize="14sp"
            android:textStyle="bold"

            />
    </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"
                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_patient"
                android:tint="@color/dark_blue"


                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/activeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recoverd"
                android:textAllCaps="true"
                android:textColor="@color/dark_green"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_heart"
                android:tint="@color/dark_green"


                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/RecoveredTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/dark_green"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deaths"
                android:textAllCaps="true"
                android:textColor="@color/dark_yellow"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_death"
                android:tint="@color/dark_yellow"


                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/DecereasedTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/dark_yellow"

                />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        tools:listheader="@layout/list_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/top_container"
        />


</RelativeLayout>


